# qitsimple

./: CMakeLists.txt  CmdController.cpp  CmdController.h  ConfigManager.cpp  ConfigManager.h  CountersMap.cpp  CountersMap.h  DaemonProc.cpp  DaemonProc.h  Logger.cpp  Logger.h  NamedQueue.cpp  NamedQueue.h  Options.h  README.md  SimpleQueue.cpp  SimpleQueue.h  SocketThreadManager.cpp  SocketThreadManager.h  Utils.cpp  Utils.h  WorkProc.cpp  WorkProc.h  init  install.sh  logger.cpp  main.cpp  monitor.cpp  work.cpp  work.h
Clients/PHP/: MicroQueue.php  Qitsimple.php
